# forte

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  catalog.html  forte.wasm  index.html  package-lock.json  package.json  packages.json  player.html  sw.js  worklet.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
blocks/: acid-line.forte  four-floor.forte
crates/dawapp/: Cargo.toml
crates/dawapp/src/: app.rs  audio.rs  main.rs  theme.rs  widgets.rs
crates/dawcore/: Cargo.toml
crates/dawcore/src/: bounce.rs  command.rs  device.rs  engine.rs  lib.rs  model.rs  samples.rs
crates/dawcore/src/dsp/: effects.rs  envelope.rs  filter.rs  grid.rs  kit.rs  mod.rs  oscillator.rs  sampler.rs  synth.rs  voice.rs
crates/dawcore/tests/: render.rs
crates/fortelang/: Cargo.toml
crates/fortelang/src/: ast.rs  audio.rs  browser.rs  compile.rs  grid_build.rs  hub.rs  hub_git.rs  hub_remote.rs  hub_server.rs  lexer.rs  lib.rs  live.rs  lsp.rs  music.rs  parser.rs  perform.rs  repl.rs  semdiff.rs  vcs.rs  viz.rs
crates/fortelang/tests/: automation.rs  blocks.rs  cli.rs  compile.rs  export.rs  fmt.rs  frec.rs  hub.rs  hub_git.rs  hub_remote.rs  inserts.rs  lsp.rs  repl.rs  stdlib.rs  vcs.rs
crates/forteweb/: Cargo.toml
crates/forteweb/src/: lib.rs
crates/forteweb/tests/: realtime.rs
docs/: GUIDE.md
docs/webdaw/: 00-research-report.md  01-vision.md  02-system-requirements.md  03-software-requirements.md  04-software-architecture.md  05-detailed-design.md  06-roadmap.md  07-determinism-spike.md  08-daw-functional-requirements.md  09-forte-studio-fork.md  10-project-first-editing.md  README.md
editor/vscode-forte/: README.md  package-lock.json  package.json
forte/: README.md
forte/crates/fortelang/: Cargo.toml
forte/crates/fortelang/src/: analyze.rs  ast.rs  browser.rs  calib.rs  compile.rs  daw.rs  diag.rs  edit.rs  export.rs  fmt.rs  frec.rs  grid_build.rs  hub.rs  hub_server.rs  lexer.rs  lib.rs  live.rs  lsp.rs  music.rs  package.rs  parser.rs  project.rs  remote.rs  selfupdate.rs  semdiff.rs  sha.rs  songfile.rs  testing.rs  vcs.rs  viz.rs  zip.rs
forte/crates/fortelang/tests/: analyze.rs  automation.rs  blocks.rs  cli.rs  compile.rs  daw.rs  edit.rs  export.rs  fmt.rs  groove.rs  hub.rs  hub_git.rs  hub_remote.rs  inserts.rs  package.rs  package_update.rs  project.rs  remote.rs  repl.rs  selfupdate.rs  songfile.rs  soundnote.rs  stdlib.rs  testing.rs  vcs.rs  workshop.rs
forte/scripts/: check_corpus.sh  ci_local.sh  determinism_test.sh  hub_e2e.mjs  latency_bench.sh  publish_web.sh  web_e2e.mjs
forte/web/: catalog.html  forte.wasm  frec.js  hub.html  index.html  main.js  player.html  rec-worker.js  recorder.js  storage.js  sw.js  vcs.js  viz.js  worklet.js
lib/std/: bass.forte  cr78.forte  drums.forte  fx.forte  keys.forte  (+10 more)
scripts/: build_web.sh  check_corpus.sh  determinism_test.sh  hub_e2e.mjs  run-wasi.mjs  visual_test.sh  web_e2e.mjs
share/: first-light.html  hot-reload.html
songs/: first-light.forte  handmade-kit.forte  handmade.forte  night-drive.forte  night-parade.forte  slow-circles.forte  std-tour.forte
src/: styles.css
studio/: README.md  bootstrap.sh  product.json
web/: frec.js  hub.html  hub.js  index.html  main.js  recorder.js  storage.js  sw.js  viz.js  worklet.js
(+123 files in other folders)
