[workspace]
resolver = "2"
members = ["crates/dawcore", "crates/dawapp"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["bitwig-clone contributors"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Keep audio-thread code fast even in debug builds.
[profile.dev.package.dawcore]
opt-level = 2
