[package]
name = "dawcore"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forte real-time audio engine and DSP core. No GUI or hardware dependencies."

[dependencies]
libm = "0.2"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"

[dev-dependencies]
hound = "3.5"
