[package]
name = "fortelang"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forte lang v0: compile .forte song sources into the dawcore engine and build deterministic audio."

[dependencies]
dawcore = { path = "../dawcore" }
serde_json = "1"

[[bin]]
name = "forte"
path = "src/bin/forte.rs"
