[package]
name = "fortelang"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forte lang v0: compile .forte song sources into the dawcore engine and build deterministic audio."

[dependencies]
dawcore = { path = "../dawcore" }
serde_json = "1"

# `forte play` only; not available on wasm32 (browser playback goes through
# AudioWorklet instead — SAD §3.2).
[target.'cfg(not(target_family = "wasm"))'.dependencies]
cpal = "0.15"

[[bin]]
name = "forte"
path = "src/bin/forte.rs"
