[package]
name = "forteweb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C-ABI wasm bindings for the Forte compiler + engine: powers the browser editor (AudioWorklet playback, main-thread diagnostics/digest)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dawcore = { path = "../dawcore" }
fortelang = { path = "../fortelang" }
serde_json = "1"
